[package]
name = "kvantti"
version = "0.1.0"
authors = ["Walther <veeti.haapsamo@gmail.com>"]
edition = "2018"
description = "A quantum computer simulator implementation."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.3.1"
float-cmp = "0.8.0"
